<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="category_appearance"
        android:title="@string/settings_appearance">

        <ListPreference
            android:key="pref_theme_mode"
            android:title="@string/settings_theme_mode"
            android:defaultValue="system"
            android:entries="@array/theme_mode_entries"
            android:entryValues="@array/theme_mode_values"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="category_legal"
        android:title="@string/settings_legal_section">

        <Preference
            android:key="pref_terms"
            android:title="@string/settings_terms"
            android:summary="@string/settings_terms_hint" />

        <Preference
            android:key="pref_privacy"
            android:title="@string/settings_privacy"
            android:summary="@string/settings_privacy_hint" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="category_about"
        android:title="@string/settings_about_section">

        <Preference
            android:key="pref_about"
            android:title="@string/settings_about" />

        <Preference
            android:key="pref_reset_app"
            android:title="@string/settings_reset_app"
            android:summary="@string/settings_reset_app_hint" />
    </PreferenceCategory>

</PreferenceScreen>

